--- a/QRCodeSample/Tam.QRCode/Tam.QRCode.csproj
+++ b/QRCodeSample/Tam.QRCode/Tam.QRCode.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractQRCode.cs" />
+    <Compile Include="BootQR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QRCode.cs" />
     <Compile Include="QRCodeData.cs" />
