--- a/FirstKnock/FirstKnock.DataLayer/FirstKnock.DataLayer.csproj
+++ b/FirstKnock/FirstKnock.DataLayer/FirstKnock.DataLayer.csproj
@@ -45,7 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DabataseManager.cs" />
+    <Compile Include="ISalesOrderRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalesOrderRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FirstKnock.Domain\FirstKnock.Domain.csproj">
